fix(sql): unable to create report properly